# VoxelicousEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  VoxelicousEngine.sln  build.bat  imgui.ini  premake5.lua
Editor/: CMakeLists.txt  Editor.vcxproj  imgui.ini  premake5.lua
Editor/shaders/: fullscreen.frag  fullscreen.vert.spv  simple.frag  simple.frag.spv  simple.vert.spv
Editor/src/: Editor.cpp
FirstApp/: CMakeLists.txt
FirstApp/src/: FirstApp.cpp
VoxelicousEngine/: CMakeLists.txt  VoxelicousEngine.vcxproj  VoxelicousEngine.vcxproj.filters  premake5.lua
VoxelicousEngine/FirstApp/src/: FirstApp.cpp
VoxelicousEngine/VoxelicousEngine/: CMakeLists.txt
VoxelicousEngine/VoxelicousEngine/src/VoxelicousEngine/Core/: EntryPoint.h
VoxelicousEngine/src/: VoxelicousEngine.h  vepch.h
VoxelicousEngine/src/Core/: App.cpp  App.h  AppSettings.cpp  AppSettings.h  Assert.h  Core.cpp  Core.h  EntryPoint.h  GameObject.h  KeyboardCameraController.cpp  KeyboardCameraController.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  LogCustomFormatters.h  Model.cpp  Model.h  Ref.cpp  Ref.h  RenderThread.h  Thread.h  TimeStep.cpp  TimeStep.h  Timer.h  UIAccess.cpp  UIAccess.h  UUID.cpp  UUID.h  Version.h  Window.h
VoxelicousEngine/src/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
VoxelicousEngine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
VoxelicousEngine/src/Platform/GLFW/: ImGuiGlfwRenderer.cpp
VoxelicousEngine/src/Platform/Vulkan/: ImGuiVulkanRenderer.cpp  ImGuiVulkanRenderer.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h
VoxelicousEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
VoxelicousEngine/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DefaultLayer.cpp  DefaultLayer.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  FrameInfo.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  ShaderManager.cpp  ShaderManager.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  SpirvHelper.cpp  SpirvHelper.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  VoxelRaytraceSystem.cpp  VoxelRaytraceSystem.h  VulkanContext.cpp  VulkanContext.h
VoxelicousEngine/src/Voxel/: SparseVoxelOctree.cpp  SparseVoxelOctree.h  VoxelData.h  VoxelWorld.cpp  VoxelWorld.h
VoxelicousEngine/src/VoxelicousEngine/: VoxelicousEngine.h  vepch.h
VoxelicousEngine/src/VoxelicousEngine/Core/: App.cpp  App.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
VoxelicousEngine/src/VoxelicousEngine/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
VoxelicousEngine/src/VoxelicousEngine/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
scripts/: SetupPremake.py  SetupVulkan.py  Win-GenProjects.bat  setup.py
shaders/: README.md  fullscreen.vert  raytracer.comp  simple.frag.spv  simple.vert  simple.vert.spv
submodules/premake/: Premake.vcxproj  Premake.vcxproj.filters
